@@ -1,3 +1,6 @@
+* Tue Apr 11 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.3-0
+- nfs_anon_write selboolean is only applied if selinux is on.
+
 * Thu Mar 23 2017 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.0.2-0
 - Fixed path for systemctl
 
